<resources>
    <string name="app_name">Seven Stars</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tab">Tab_Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_splash_screen">Splash_Screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_activity_account">account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="logo_image">Logo_image</string>
    <string name="seven_stars">Seven Stars</string>
    <string name="profile_set">profile_set</string>
    <string name="name_of_donator">Name of Donator</string>
    <string name="name_of_donor">name_of_donor</string>
    <string name="email_id">Email ID</string>
    <string name="wishlist">Wishlist</string>
    <string name="trust_name">Trust Name</string>
    <string name="my_wishlist">MY WISHLIST</string>
    <string name="add_lowest">Add_lowest</string>
    <string name="trust_name1">trust_name</string>
    <string name="trust_name2">trust_name</string>
    <string name="donations">Donations</string>
    <string name="profile_name">Profile Name</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="title_activity_account_fullscreen">Account_Fullscreen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>