<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Wishlist_Activity_sample">

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/trust_name1"
        android:visibility="gone"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Navy_Blue_Light"
        >

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray1">



            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/gray1"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="5dp">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/logo_image"
                            android:src="@drawable/i6" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@id/logo"
                        android:layout_alignBottom="@id/logo"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/logo"
                        android:fontFamily="@font/new_font"
                        android:gravity="center_vertical"
                        android:text="WishList"
                        android:textColor="@color/Orange"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        app:cardCornerRadius="5dp"/>

                    <TextView
                        android:id="@+id/star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/card"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/card"
                        android:gravity="center_vertical"
                        android:text="@string/name_of_donor"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/star"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="10dp"
                        android:ellipsize="end"
                        android:maxEms="8"
                        android:maxLines="3"
                        android:text="@string/email_id"
                        android:textColor="#262626"
                        android:visibility="gone" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray1"
        >

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </RelativeLayout>

</LinearLayout>